perf: optimize test matrix to 3 combinations (3.10/ubuntu, 3.11/windows, 3.12/macos)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,13 @@ jobs:
   test:
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12', '3.13']
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - python-version: '3.10'
+            os: ubuntu-latest
+          - python-version: '3.11'
+            os: windows-latest
+          - python-version: '3.12'
+            os: macos-latest
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
 
