--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,11 +43,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv sync --all-extras --dev
-
-      - name: Install project
-        run: |
-          uv pip install -e .
+          uv sync
 
       - name: Run tests with unittest
         run: |
