fix: use working-directory for cross-platform compatibility in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,9 +46,8 @@ jobs:
           uv sync
 
       - name: Run tests with unittest
-        run: |
-          cd tests
-          uv run python -m unittest discover -v
+        working-directory: tests
+        run: uv run python -m unittest discover -v
 
       - name: Upload test logs on failure
         if: failure()
