--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,8 @@ jobs:
 
       - name: Run tests with unittest
         working-directory: tests
+        env:
+          PYTHONIOENCODING: utf-8
         run: uv run python -m unittest discover -v
 
       - name: Upload test logs on failure
